2012-05-01  Andreas Kling  <kling@webkit.org>

        Remove Mac WK2-specific result for svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm.

        * platform/mac-wk2/svg/zoom/page/zoom-replaced-intrinsic-ratio-001-expected.txt: Removed.

2012-05-01  Yuzhu Shen  <yzshen@chromium.org>

        Fix test regression introduced by r115086.
        https://bugs.webkit.org/show_bug.cgi?id=84566

        Reviewed by Pavel Feldman.

        * inspector/network-status-non-http.html:
        * platform/qt/Skipped:

2012-05-01  Kent Tamura  <tkent@chromium.org>

        [Chromium] Rebaseline for recent changes about <input type=date>.

        * platform/chromium-linux/fast/forms/date/date-appearance-expected.png:
        * platform/chromium-linux/fast/forms/date/date-appearance-expected.txt:
        * platform/chromium-mac/fast/forms/date/date-appearance-expected.png:
        * platform/chromium-mac/fast/forms/date/date-appearance-expected.txt:
        * platform/chromium-mac/fast/forms/date/date-input-visible-strings-expected.txt: Copied from LayoutTests/platform/chromium/fast/forms/date/date-input-visible-strings-expected.txt.
        * platform/chromium-win/fast/forms/date/date-appearance-expected.png:
        * platform/chromium-win/fast/forms/date/date-appearance-expected.txt:
        * platform/chromium-win/fast/forms/date/date-input-visible-strings-expected.txt: Renamed from LayoutTests/platform/chromium/fast/forms/date/date-input-visible-strings-expected.txt.
        * platform/chromium/test_expectations.txt:

2012-05-01  Kent Tamura  <tkent@chromium.org>

        [Chromium] Test expectation update for r115713.
        https://bugs.webkit.org/show_bug.cgi?id=84935

        * platform/chromium/test_expectations.txt:
        Mark TEXT for date-input-visible-strings.html

2012-05-01  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK test_expectations update.

        * platform/gtk/test_expectations.txt: media/track/track-mode.html